# serializer version: 1
# name: TestLexaloffleGenerator.test_generate
  tuple(
    list([
      '/userdata/bios/pico-8/pico8',
      '-desktop',
      '/userdata/screenshots',
      '-windowed',
      '0',
      '-show_fps',
      '0',
      '-root_path',
      '/userdata/roms/pico8',
      '-run',
      '/userdata/roms/pico8/rom.p8',
    ]),
    dict({
      'LD_LIBRARY_PATH': '/userdata/bios/pico-8',
    }),
  )
# ---
# name: TestLexaloffleGenerator.test_generate[controllers]
  '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,'
# ---
# name: TestLexaloffleGenerator.test_generate_show_fps
  tuple(
    list([
      '/userdata/bios/pico-8/pico8',
      '-desktop',
      '/userdata/screenshots',
      '-windowed',
      '0',
      '-show_fps',
      '1',
      '-root_path',
      '/userdata/roms/pico8',
      '-run',
      '/userdata/roms/pico8/rom.png',
    ]),
    dict({
      'LD_LIBRARY_PATH': '/userdata/bios/pico-8',
    }),
  )
# ---
# name: TestLexaloffleGenerator.test_generate_show_m3u
  tuple(
    list([
      '/userdata/bios/pico-8/pico8',
      '-desktop',
      '/userdata/screenshots',
      '-windowed',
      '0',
      '-show_fps',
      '0',
      '-root_path',
      '/userdata/roms/pico8/rom_dir',
      '-run',
      '/userdata/roms/pico8/rom_dir/one.png',
    ]),
    dict({
      'LD_LIBRARY_PATH': '/userdata/bios/pico-8',
    }),
  )
# ---
# name: TestLexaloffleGenerator.test_generate_splore[CONSOle]
  tuple(
    list([
      '/userdata/bios/pico-8/pico8',
      '-desktop',
      '/userdata/screenshots',
      '-windowed',
      '0',
      '-show_fps',
      '0',
      '-root_path',
      '/userdata/roms/pico8',
      '-splore',
    ]),
    dict({
      'LD_LIBRARY_PATH': '/userdata/bios/pico-8',
    }),
  )
# ---
# name: TestLexaloffleGenerator.test_generate_splore[SpLoRe]
  tuple(
    list([
      '/userdata/bios/pico-8/pico8',
      '-desktop',
      '/userdata/screenshots',
      '-windowed',
      '0',
      '-show_fps',
      '0',
      '-root_path',
      '/userdata/roms/pico8',
      '-splore',
    ]),
    dict({
      'LD_LIBRARY_PATH': '/userdata/bios/pico-8',
    }),
  )
# ---
# name: TestLexaloffleGenerator.test_generate_voxatron
  tuple(
    list([
      '/userdata/bios/voxatron/vox',
      '-desktop',
      '/userdata/screenshots',
      '-windowed',
      '0',
      '-show_fps',
      '0',
      '-root_path',
      '/userdata/roms/voxatron',
      '-run',
      '/userdata/roms/voxatron/rom.png',
    ]),
    dict({
      'LD_LIBRARY_PATH': '/userdata/bios/voxatron',
    }),
  )
# ---
# name: TestLexaloffleGenerator.test_generate_voxatron[controllers]
  '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,'
# ---
# name: TestLexaloffleGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTCTRL',
        'KEY_Q',
      ]),
      'menu': 'KEY_ENTER',
      'reset': list([
        'KEY_LEFTCTRL',
        'KEY_R',
      ]),
    }),
    'name': 'lexaloffle',
  })
# ---
